# local-orchestrator-tray

./: .gitignore  .mcp.json  BUILD_MAC_APP.md  CLAUDE.md  MANIFEST.in  README.md  TEST_REPORT.md  build_mac_app.py  example-config.yaml  local_orchestrator_tray.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  test icon_resolution.py  test_application_startup.py  test_basic.py  test_build.py  test_built_in_actions.py  test_icon_resolution.py  test_packaging_validation.py  test_simple.py  test_telegram_functionality.py  user_prompts.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: python-code-reviewer.md  root-cause-detective.md  tdd-implementer.md  tdd-test-writer.md
.claude/agents/core/: coder.md
.claude/commands/: claude-flow-swarm.md  test-fixing-wf.md
.claude/commands/troubleshooting/: bug.md  fix-bug.md  fix-tests.md  tests.md
.devcontainer/: devcontainer.json  install_tools.sh
.github/actions/telegram-notify/: action.yml
.github/workflows/: build.yml  release.yml
local_orchestrator_tray/: __init__.py  configuration_manager.py  main.py  telegram_client.py
memory/: memory-coder.jsonl  memory-local.json  memory-tester.jsonl
memory/agents/: README.md
memory/sessions/: README.md
tests/: README.md  __init__.py  test_build.py  test_concurrent_message_processing.py  test_config_validation.py  test_config_validation_refactoring.py  test_configuration_manager.py  test_error_recovery_scenarios.py  test_helper_method_extraction.py  test_integration_message_pipeline.py  test_performance_and_load.py  test_process_toml_actions.py  test_property_based_config_validation.py  test_security_token_validation.py  test_suite_runner.py  test_telegram_channel_support.py  test_telegram_functionality.py  test_validate_config_comprehensive.py
